--- a/webserver/views/header.html
+++ b/webserver/views/header.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/common.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/layout.css">
 	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.css">
 
     <!-- 폰트 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,6 +31,8 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="/static/js/jquery-3.5.1.min.js"></script>
     <script src="/static/js/index.js" type="text/javascript"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
+
 	
 
     <!-- 웹소켓 -->
@@ -80,6 +83,16 @@
             const div = document.createElement('div');
             div.innerHTML = htmlString.trim();
             return div.firstElementChild;
+        }
+
+        function alert(msg, text){
+            Swal.fire({
+                icon: 'warning',
+                title: msg,
+                text: text,
+                confirmButtonColor: '#1b4b43', // confrim 버튼 색깔 지정
+                confirmButtonText: '확인',
+              });
         }
     </script>
 </head>
