--- a/webserver/views/output/regist_address.html
+++ b/webserver/views/output/regist_address.html
@@ -1,37 +1,37 @@
 {{define "output/regist_address"}}
 {{template "header" .}}
 
-    <main id="main">
-        <div class="content-wrap">
-            <div class="fixed-btn">
-                <button class="btn-normal" id="$cancel_btn"><a href="/"></a>첫 화면으로</button>
+        <main id="main">
+            <div class="content-wrap">
+                <div class="fixed-btn">
+                    <button class="btn-normal" id="$cancel_btn"><a href="/">첫 화면으로</a></button>
+                </div>
+                <div class="list-box">
+                    <div class="list-title">아래의 정보를 입력해 주세요</div>
+                    <div class="list-top">
+                        <p class="title">귀하의 호수</p>
+                        <p class="value"><input type="number" id="$address" value="">호</p>
+                    </div>
+                    <div class="number-input" id="number_keypad">
+                        <button class="number" value="1">1</button>
+                            <button class="number" value="2">2</button>
+                            <button class="number" value="3">3</button>
+                            <button class="number" value="4">4</button>
+                            <button class="number" value="5">5</button>
+                            <button class="number" value="6">6</button>
+                            <button class="number" value="7">7</button>
+                            <button class="number" value="8">8</button>
+                            <button class="number" value="9">9</button>
+                            <button></button>
+                            <button class="number" value="0">0</button>
+                            <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+                    </div>
+                    <div class="btn-wrap">
+                        <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
+                    </div>
+                </div>
             </div>
-            <div class="list-box">
-                <div class="list-title">아래의 정보를 입력해 주세요</div>
-                <div class="list-top">
-                    <p class="title">귀하의 호수</p>
-                    <p class="value"><input type="number" id="$address" value="">호</p>
-                </div>
-                <div class="number-input" id="number_keypad">
-                    <button class="number" value="1">1</button>
-                        <button class="number" value="2">2</button>
-                        <button class="number" value="3">3</button>
-                        <button class="number" value="4">4</button>
-                        <button class="number" value="5">5</button>
-                        <button class="number" value="6">6</button>
-                        <button class="number" value="7">7</button>
-                        <button class="number" value="8">8</button>
-                        <button class="number" value="9">9</button>
-                        <button></button>
-                        <button class="number" value="0">0</button>
-                        <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
-                </div>
-                <div class="btn-wrap">
-                    <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
-                </div>
-            </div>
-        </div>
-    </main>
+        </main>
     </div>
 </body>
 </html>
@@ -54,7 +54,7 @@
         .catch(err => {
             if (err.response.status === 404) {
                 
-                alert('보관된 택배가 없습니다.');
+                alert('보관된 택배가 없습니다.', '다시 입력해주세요');
             } else {
                 console.error(err);
             }
@@ -85,7 +85,6 @@
             document.getElementById("$address").value = address;
         }
     };
-
 
 </script>
 {{end}}
