--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -35,20 +35,52 @@
 </html>
 
 <script>
-    let intervalId;
-    setTimeout(function(){
-        intervalId = setInterval(sort, 4000);
+    let intervalIdBuffer;
+    let intervalIdItem;
+    let next = true;    // 함수 실행중인지 확인하는 변수
+
+    setTimeout(function (){
+        intervalIdBuffer = setInterval(sortTrayBuffer, 1000)
     }, 10000); 
 
-    function sort(){
-        axios.post('/sort').then(res => {
-            console.log(res.data)
-            
-        }).catch(err => {
-            console.log(err);
-            clearInterval(intervalId);
-            console.log(err.response.data.error);
-        });
+    // 트레이 버퍼 개수를 15개로 유지
+    function sortTrayBuffer(){
+        if(next == true){
+            next = false;
+            axios.get('/sort/tray_buffer').then(res => {
+                let response = res.data;
+                console.log("버퍼개수",response.data);
+                let count = JSON.parse(response.data);                
+                if(count == 15){
+                    clearInterval(intervalIdBuffer);
+                    next = true;
+                    intervalIdItem = setInterval(sortItem, 1000);
+                }
+                next = true;
+            })
+            .catch(err => {
+                console.log(err);
+                clearInterval(intervalIdBuffer);
+                next = true;
+                intervalIdItem = setInterval(sortItem, 1000);
+            });
+        }
+    }
+
+    function sortItem(){
+        if(next == true){
+            next = false;
+            axios.post('/sort/item').then(res => {
+                console.log(res.data)
+                next = true;
+                
+            }).catch(err => {
+                console.log(err);
+                console.log(err.response.data.error);
+                clearInterval(intervalIdItem);
+            });
+        }
+        
     }
 
     popup_open_btn.onclick = () => {
